--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,13 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
+##################System#####################
 kotlin.code.style=official
+#kotlin v1.3或更高版本默认是开启状态的
+#kotlin.coroutines=enable
 
-kotlin.coroutines=enable
+###################Glide#####################
+#glide缓存路径
+glide_cache_path=.OwnGlideCache
+#glide缓存大小 24mb
+glide_cache_memory=1024L * 1024L * 24L
