--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,42 +10,101 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a"
+        }
     }
+
+    signingConfigs {
+        /*签名配置*/config {
+//            storeFile file(RELEASE_STORE_FILE)
+//            keyAlias RELEASE_KEY_ALIAS
+//            storePassword RELEASE_STORE_PASSWORD
+//            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+
     buildTypes {
-        release {
+        /*生产环境*/release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "Long", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
-            buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
+            /*包名后缀*/applicationIdSuffix ""
+//            /*签名配置*/signingConfig signingConfigs.config
+            /*图片加载框架,缓存路径*/ buildConfigField "Long", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
+            /*图片加载框架,缓存大小*/ buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
+            /*友盟统计框架,安全码*/ buildConfigField "String", "UMENG_SECRET_KEY", "\"${umeng_secret_key}\""
+            /*友盟统计框架,应用ID*/ buildConfigField "String", "UMENG_APP_IDENTITY", "\"${umeng_app_identity}\""
+            /*友盟统计框架,渠道号*/ buildConfigField "String", "UMENG_CHANNEL", "\"${umeng_channel}\""
+            /*网络框架,生产环境服务器地址*/ buildConfigField "String", "SERVICE_BASE_URL", "\"${produce_base_url}\""
+            /*AndroidManifest.xml配置项*/ manifestPlaceholders = [
+                    /*桌面启动图标，显示图标*/ CATEGORY_LAUNCHER: "none"
+            ]
         }
-        debug{
-            buildConfigField "String", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
-            buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
+        /*测试环境*/debug {
+            /*包名后缀*/applicationIdSuffix ".test"
+//            /*签名配置*/signingConfig signingConfigs.config
+            /*图片加载框架,缓存路径*/ buildConfigField "String", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
+            /*图片加载框架,缓存大小*/ buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
+            /*友盟统计框架,安全码*/ buildConfigField "String", "UMENG_SECRET_KEY", "\"${umeng_secret_key}\""
+            /*友盟统计框架,应用ID*/ buildConfigField "String", "UMENG_APP_IDENTITY", "\"${umeng_app_identity}\""
+            /*友盟统计框架,渠道号*/ buildConfigField "String", "UMENG_CHANNEL", "\"${umeng_channel}\""
+            /*网络框架,测试环境服务器地址*/ buildConfigField "String", "SERVICE_BASE_URL", "\"${test_base_url}\""
+            /*AndroidManifest.xml配置项*/manifestPlaceholders = [
+                    /*桌面启动图标，显示图标*/CATEGORY_LAUNCHER: "android.intent.category.LAUNCHER"
+            ]
+        }
+
+        /*开发环境*/development {
+            /*包名后缀*/applicationIdSuffix ".dev"
+//            /*签名配置*/signingConfig signingConfigs.config
+            /*图片加载框架,缓存路径*/ buildConfigField "String", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
+            /*图片加载框架,缓存大小*/ buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
+            /*友盟统计框架,安全码*/ buildConfigField "String", "UMENG_SECRET_KEY", "\"${umeng_secret_key}\""
+            /*友盟统计框架,应用ID*/ buildConfigField "String", "UMENG_APP_IDENTITY", "\"${umeng_app_identity}\""
+            /*友盟统计框架,渠道号*/ buildConfigField "String", "UMENG_CHANNEL", "\"${umeng_channel}\""
+            /*网络框架,开发环境服务器地址*/ buildConfigField "String", "SERVICE_BASE_URL", "\"${development_base_url}\""
+            /*AndroidManifest.xml配置项*/manifestPlaceholders = [
+                    /*桌面启动图标，显示图标*/CATEGORY_LAUNCHER: "android.intent.category.LAUNCHER"
+            ]
+        }
+    }
+
+    android.applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            def file = output.outputFile
+            if (file != null && file.name.endsWith('.apk')) {
+                outputFileName = "AndroidFrameworks_v${defaultConfig.versionName}_${variant.buildType.name}.apk"
+            }
         }
     }
 }
 
 dependencies {
-    implementation project(':ToastyLibs')
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+    /*彩色Toast提示框架*/implementation project(':ToastyLibs')
+    /*system*/implementation fileTree(include: ['*.jar'], dir: 'libs')
+    /*system-kotlin*/implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    /*system-kotlinX*/implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    /*system-android*/implementation 'com.android.support:appcompat-v7:28.0.0'
+    /*system-android*/implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    implementation 'com.github.LuckyCattZW:CompatLayoutAdapter:1.0.9'
+    /*兼容适配布局*/implementation 'com.github.LuckyCattZW:CompatLayoutAdapter:1.0.9'
 
-    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    /*网络框架*/implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    /*网络框架*/implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    /*网络框架*/implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
-    implementation('com.github.bumptech.glide:okhttp3-integration:4.8.0') {
+
+    /*图片加载框架*/implementation('com.github.bumptech.glide:okhttp3-integration:4.8.0') {
         exclude group: "com.android.support"
         exclude group: "com.squareup.okhttp3"
     }
-    implementation('com.github.bumptech.glide:glide:4.8.0') {
+    /*图片加载框架*/implementation('com.github.bumptech.glide:glide:4.8.0') {
         exclude group: "com.android.support"
     }
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    /*图片加载框架*/kapt 'com.github.bumptech.glide:compiler:4.8.0'
+
+    /*友盟统计框架*/implementation 'com.umeng.sdk:common:1.5.0'
+    /*友盟统计框架*/implementation 'com.umeng.sdk:analytics:7.5.0'
 }
