--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+
     <application
             android:name=".GlobalApplication"
             android:allowBackup="true"
@@ -11,10 +12,13 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".app.master.MainActivity">
+            android:theme="@style/Theme.Launcher">
+        <!--application$android:theme 不要修改-->
+        <!--activity的样式请在代码中修改. Example:catt.mvp.sample.base.app.BaseActivity.onCreate()-->
+        <activity
+                android:name=".app.master.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="${CATEGORY_LAUNCHER}"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
