--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,14 @@ kotlin.code.style=official
 glide_cache_path=.OwnGlideCache
 #glideª∫¥Ê¥Û–° 24mb
 glide_cache_memory=1024L * 1024L * 24L
+
+
+###################Umeng#######################
+umeng_secret_key=
+umeng_app_identity=
+umeng_channel=
+
+###################Base-url#######################
+produce_base_url=http://dev.zuul.hcb66.com/
+test_base_url=http://dev.zuul.hcb66.com/
+development_base_url=http://dev.zuul.hcb66.com/
