--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             /*包名后缀*/applicationIdSuffix ""
 //            /*签名配置*/signingConfig signingConfigs.config
-            /*图片加载框架,缓存路径*/ buildConfigField "Long", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
+            /*图片加载框架,缓存路径*/ buildConfigField "String", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
             /*图片加载框架,缓存大小*/ buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
             /*友盟统计框架,安全码*/ buildConfigField "String", "UMENG_SECRET_KEY", "\"${umeng_secret_key}\""
             /*友盟统计框架,应用ID*/ buildConfigField "String", "UMENG_APP_IDENTITY", "\"${umeng_app_identity}\""
@@ -42,7 +42,7 @@ android {
             ]
         }
         /*测试环境*/debug {
-            /*包名后缀*/applicationIdSuffix ".test"
+            /*包名后缀*/applicationIdSuffix ".debug"
 //            /*签名配置*/signingConfig signingConfigs.config
             /*图片加载框架,缓存路径*/ buildConfigField "String", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
             /*图片加载框架,缓存大小*/ buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
