--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "1.0_$versionCode"
 
         ndk {
             abiFilters "armeabi", "armeabi-v7a"
@@ -29,8 +29,9 @@ android {
         /*生产环境*/release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            /*包名后缀*/applicationIdSuffix ""
 //            /*签名配置*/signingConfig signingConfigs.config
+            /*包名后缀*/applicationIdSuffix ""
+            /*版本后缀*/versionNameSuffix "-re-kt"
             /*图片加载框架,缓存路径*/ buildConfigField "String", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
             /*图片加载框架,缓存大小*/ buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
             /*友盟统计框架,安全码*/ buildConfigField "String", "UMENG_SECRET_KEY", "\"${umeng_secret_key}\""
@@ -42,8 +43,9 @@ android {
             ]
         }
         /*测试环境*/debug {
-            /*包名后缀*/applicationIdSuffix ".debug"
 //            /*签名配置*/signingConfig signingConfigs.config
+            /*包名后缀*/applicationIdSuffix ".debug"
+            /*版本后缀*/versionNameSuffix "-de-kt"
             /*图片加载框架,缓存路径*/ buildConfigField "String", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
             /*图片加载框架,缓存大小*/ buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
             /*友盟统计框架,安全码*/ buildConfigField "String", "UMENG_SECRET_KEY", "\"${umeng_secret_key}\""
@@ -56,8 +58,9 @@ android {
         }
 
         /*开发环境*/development {
-            /*包名后缀*/applicationIdSuffix ".dev"
 //            /*签名配置*/signingConfig signingConfigs.config
+            /*包名后缀*/applicationIdSuffix ".dev"
+            /*版本后缀*/versionNameSuffix "-dev-kt"
             /*图片加载框架,缓存路径*/ buildConfigField "String", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
             /*图片加载框架,缓存大小*/ buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
             /*友盟统计框架,安全码*/ buildConfigField "String", "UMENG_SECRET_KEY", "\"${umeng_secret_key}\""
