--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,12 @@ kotlin.code.style=official
 #kotlin v1.3或更高版本默认是开启状态的
 #kotlin.coroutines=enable
 
+###################签名配置###################
+JKS_ALIAS=demo
+JKS_PASSWORD=123456
+JKS_STORE_PASSWORD=123456
+JKS_STORE_FILE=../keystore/demo.jks
+
 ###################Glide#####################
 #glide缓存路径
 glide_cache_path=.OwnGlideCache
