新分支，修改利用反射对代理实现类进行解耦

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,19 +14,17 @@ org.gradle.jvmargs=-Xmx1536m
 # Kotlin code style for this project: "official" or "obsolete":
 ##################System#####################
 kotlin.code.style=official
-#kotlin v1.3或更高版本默认是开启状态的
-#kotlin.coroutines=enable
 
-###################签名配置###################
+###################绛惧悕閰嶇疆###################
 JKS_ALIAS=demo
 JKS_PASSWORD=123456
 JKS_STORE_PASSWORD=123456
 JKS_STORE_FILE=../keystore/demo.jks
 
 ###################Glide#####################
-#glide缓存路径
+#glide缂撳瓨璺緞
 glide_cache_path=.OwnGlideCache
-#glide缓存大小 24mb
+#glide缂撳瓨澶у皬 24mb
 glide_cache_memory=1024L * 1024L * 24L
 
 
