添加EventBus框架,代理类之间增加穿透性

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         versionName "1.0_$versionCode"
 
         ndk {
-            abiFilters "armeabi", "armeabi-v7a"
+//            abiFilters "armeabi", "armeabi-v7a"
         }
     }
 
@@ -85,6 +85,7 @@ android {
 
 dependencies {
     /*彩色Toast提示框架*/implementation project(':ToastyLibs')
+    /*基于androidOS的事件总线框架*/implementation project(':AndroidEventBusLibs')
     /*system*/implementation fileTree(include: ['*.jar'], dir: 'libs')
     /*system-kotlin*/implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     /*system-kotlinX*/implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
