--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,9 @@ android {
             /*签名配置*/signingConfig signingConfigs.config
             /*包名后缀*/applicationIdSuffix ""
             /*版本后缀*/versionNameSuffix "-re-kt"
-            /*图片加载框架,缓存路径*/ buildConfigField "String", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
-            /*图片加载框架,缓存大小*/ buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
             /*友盟统计框架,安全码*/ buildConfigField "String", "UMENG_SECRET_KEY", "\"${umeng_secret_key}\""
             /*友盟统计框架,应用ID*/ buildConfigField "String", "UMENG_APP_IDENTITY", "\"${umeng_app_identity}\""
             /*友盟统计框架,渠道号*/ buildConfigField "String", "UMENG_CHANNEL", "\"${umeng_channel}\""
-            /*网络框架,生产环境服务器地址*/ buildConfigField "String", "SERVICE_BASE_URL", "\"${produce_base_url}\""
             /*AndroidManifest.xml配置项*/ manifestPlaceholders = [
                     /*桌面启动图标，显示图标*/ CATEGORY_LAUNCHER: "none"
             ]
@@ -46,12 +43,9 @@ android {
             /*签名配置*/signingConfig signingConfigs.config
             /*包名后缀*/applicationIdSuffix ".debug"
             /*版本后缀*/versionNameSuffix "-de-kt"
-            /*图片加载框架,缓存路径*/ buildConfigField "String", "GLIDE_CACHE_PATH", "\"${glide_cache_path}\""
-            /*图片加载框架,缓存大小*/ buildConfigField "Long", "GLIDE_CACHE_MEMORY", "${glide_cache_memory}"
             /*友盟统计框架,安全码*/ buildConfigField "String", "UMENG_SECRET_KEY", "\"${umeng_secret_key}\""
             /*友盟统计框架,应用ID*/ buildConfigField "String", "UMENG_APP_IDENTITY", "\"${umeng_app_identity}\""
             /*友盟统计框架,渠道号*/ buildConfigField "String", "UMENG_CHANNEL", "\"${umeng_channel}\""
-            /*网络框架,测试环境服务器地址*/ buildConfigField "String", "SERVICE_BASE_URL", "\"${test_base_url}\""
             /*AndroidManifest.xml配置项*/manifestPlaceholders = [
                     /*桌面启动图标，显示图标*/CATEGORY_LAUNCHER: "android.intent.category.LAUNCHER"
             ]
@@ -69,6 +63,17 @@ android {
 }
 
 dependencies {
+    /*框架*/implementation ( project(':DevelopmentFramwork')){
+        exclude group: "com.android.support"
+        exclude group: "com.github.bumptech.glide"
+        exclude group: "org.jetbrains.kotlin"
+        exclude group: "org.jetbrains.kotlinx"
+        exclude group: "com.github.LuckyCattZW"
+        exclude group: "com.squareup.okhttp3"
+        exclude group: "com.squareup.retrofit2"
+        exclude group: "com.umeng.sdk"
+
+    }
     /*彩色Toast提示框架*/implementation project(':ToastyLibs')
     /*基于androidOS的事件总线框架*/implementation project(':AndroidEventBusLibs')
     /*system*/implementation fileTree(include: ['*.jar'], dir: '../.libs')
