--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,8 @@ org.gradle.jvmargs=-Xmx1536m
 # Kotlin code style for this project: "official" or "obsolete":
 ##################System#####################
 kotlin.code.style=official
+android.debug.obsoleteApi=false
+
 
 ###################签名配置###################
 JKS_ALIAS=demo
