减少初始化框架的数量

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
-include ':app', ':ToastyLibs', ':AndroidEventBusLibs', ':DevelopmentFramework'
+include ':app'
+include ':ToastyLibs'
+include ':AndroidEventBusLibs'
+include ':DevelopmentFramework'
